--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 <body>
-  <div class="time-blur">
+  <div class="time-blur" id="timeBlur">
     
   </div>
-  <h1 id="timeDisplay"></h1>
+  <h1 class="timeDisplay time" id="timeDisplay"></h1>
 
   <div id="button-container">
     <div id="color-btn">
@@ -35,6 +35,7 @@
     <div class="shape"></div>
     <div class="shape"></div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
